🔧 fix(index.pug): replace paymentPatternPlan and paymentPatternPay with paymentPatternSpacer to remove unnecessary elements and improve layout spacing 🔧 fix(main.sass): update width property to use calc() function to dynamically calculate width based on available space and improve responsiveness

--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -380,7 +380,7 @@
         width: 700px
         $margin-mf: 35px
         +max-SP
-          width: 300px
+          width: calc(100% - 50px)
         margin: 40px 20px auto
         .list
           justify-content: space-between
@@ -389,16 +389,19 @@
           width: (700px - $margin-mf)/3
           margin: 0 $margin-mf/2 auto
           +max-SP
-            width: 300px
+            width: calc(100% - 50px)
         .info
           margin-top: 20px
           text-align: center
+          +max-SP
+          text-align: left
       h3
         display: block
         padding: .5em
         border: 1px solid $green
         line-height: 2em
         font-weight: 500
+        box-sizing: border-box
       .grid
         margin-top: 10px
         display: grid
@@ -459,6 +462,9 @@
     text-align: justify
     margin: 10px 0 0 0
     line-height: 1.5em
+  +max-SP
+    width: calc(100% - 50px)
+    margin: 10px auto 0
 
 #calendar
   text-align: center
@@ -494,7 +500,7 @@
 
     +max-SP
       display: block
-      width: 80%
+      width: calc(100% - 50px)
     .list
       width: 45%
       +max-SP
